--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         </div>
         <div class="foot-panel3">
             <div class="logo"></div>
+            <div class="logo1"></div>
         </div>
     </footer>
 </body>
